# docker-mdns-helper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_docker_compose.md  avahi_publisher.py  config.py  daemonize.py  docker-compose.yml  docker_domains.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
_avahi/: __init__.py
tests/: test_avahi_publisher.py  test_docker_domains.py  test_robustness.py  test_version_compatibility.py
